--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -56,6 +56,7 @@
 }
 @media screen and (max-width:376px){
     .info{width:70%;}
-    form{width:80%;}
+     form{width:80%;}
     .footer p{font-size:10px;}
+    .menu li a{font-size:15px;}
 }
