--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -30,6 +30,7 @@
     .text,.me{width:60%;}
     .text h2{font-size:30px;}
     .text p{font-size: 25px;}
+    .text{text-align:center;}
     .heading h2{padding:20px;}
     .profil p{padding:15px; font-size: 15px;}
     .skill i{font-size:70px;}
@@ -45,6 +46,7 @@
     .footer{flex-direction: column;text-align: center;padding:15px 0px 5px 0px;}
     .link{width:100%;margin-bottom:10px;}
     .footer p{width:100%;}
+        
 }
 
 @media screen and (max-width:511px){
