--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -32,7 +32,7 @@
     .text p{font-size: 25px;}
     .text{text-align:center;}
     .heading h2{padding:20px;}
-    .profil p{padding:15px; font-size: 15px;}
+    .profil p{font-size: 15px;}
     .skill i{font-size:70px;}
     .skill h3{ font-size:20px;}
     .skill p{font-size: 15px;}
